comment out relational algebra slides for now

--- a/gdi-intro-databases/class4.html
+++ b/gdi-intro-databases/class4.html
@@ -60,7 +60,7 @@
 		    <section>
 					<h3>Overview</h3>
 					<ul>
-						<li>Brief Relational Algebra Overview</li>
+						<!--<li>Brief Relational Algebra Overview</li>-->
 						<li>SQL Joins</li>
 						<li>Bonus Material (time permitting):
 							<ul>
@@ -73,6 +73,7 @@
 					</ul>
         </section>
 
+<!--
 				<section>
 					<h3>Relational Algebra</h3>
 					<p>Relational algebra is a procedural query language, which takes instances of
@@ -160,6 +161,7 @@
 						<li>R − S = {2}
 					</ul>
 				</section>
+-->
 
 				<section>
 					<h3>Joining Tables</h3>
