--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="reveal/css/reveal.css">
-    <link rel="stylesheet" href="reveal/css/theme/gdidefault.css" id="theme">
+    <link rel="stylesheet" href="gdi-core-javascript-master/reveal/css/reveal.css">
+    <link rel="stylesheet" href="gdi-core-javascript-master/reveal/css/theme/gdisunny.css" id="theme">
   </head>
   <body>
-    <h1>Girl Develop It Seattle</h1>
-    <h2><a href="gdi-intro-databases/index.html">Intro to Databases</a></h2>
-    <h2>Intro to JavaScript</h2>
-    <p><a href="gdi-core-javascript-master/class1.html">Class 1</a></p>
-    <p><a href="gdi-core-javascript-master/class2.html">Class 2</a></p>
-    <p><a href="gdi-core-javascript-master/class3.html">Class 3</a></p>
-    <p><a href="gdi-core-javascript-master/class4.html">Class 4</a></p>
-	<h2>Intro to Web Concepts</h2>
-    <p><a href="gdi-intro-web-concepts/index.html">Class Slides</a></p>
-    <h2>Intermediate HTML and CSS</h2>
-    <p><a href="gdi-core-intermediate-html-css-master/class1.html">Class 1 Slides</a></p>
-    <p><a href="gdi-core-intermediate-html-css-master/class1.zip">Class 1 Practice Files</a></p>
-    <p><a href="gdi-core-intermediate-html-css-master/class2.html">Class 2</a></p>
-    <p><a href="gdi-core-intermediate-html-css-master/class2.zip">Class 2 Practice Files</a></p>
-    <p><a href="gdi-core-intermediate-html-css-master/class3.html">Class 3</a></p>
-    <p><a href="gdi-core-intermediate-html-css-master/class3.zip">Class 3 Practice Files</a></p>
-    <p><a href="gdi-core-intermediate-html-css-master/class4.html">Class 4</a></p>
-    <p><a href="gdi-core-intermediate-html-css-master/class4.zip">Class 4 Practice Files</a></p>
-  <h2>Intro to Python</h2>
-    <p><a href="gdi-intro-python/class1.html">Class 1</a></p>
-    <p><a href="gdi-intro-python/class2.html">Class 2</a></p>
-    <p><a href="gdi-intro-python/class3.html">Class 3</a></p>
-    <p><a href="gdi-intro-python/class4.html">Class 4</a></p>
-    <p><a href="gdi-intro-python/Examples.zip">Python Example Files</a></p>
+      <h2>Girl Develop It Seattle</h2>
+      <h3><a href="gdi-intro-databases/index.html">Intro to Databases</a></h3>
+      <h3>Intro to JavaScript</h3>
+      <p><a href="gdi-core-javascript-master/class1.html">Class 1</a></p>
+      <p><a href="gdi-core-javascript-master/class2.html">Class 2</a></p>
+      <p><a href="gdi-core-javascript-master/class3.html">Class 3</a></p>
+      <p><a href="gdi-core-javascript-master/class4.html">Class 4</a></p>
+
+      <h3>Intermediate HTML and CSS</h3>
+      <p><a href="gdi-core-intermediate-html-css-master/class1.html">Class 1 Slides</a></p>
+      <p><a href="gdi-core-intermediate-html-css-master/class1.zip">Class 1 Practice Files</a></p>
+      <p><a href="gdi-core-intermediate-html-css-master/class2.html">Class 2</a></p>
+      <p><a href="gdi-core-intermediate-html-css-master/class2.zip">Class 2 Practice Files</a></p>
+      <p><a href="gdi-core-intermediate-html-css-master/class3.html">Class 3</a></p>
+      <p><a href="gdi-core-intermediate-html-css-master/class3.zip">Class 3 Practice Files</a></p>
+      <p><a href="gdi-core-intermediate-html-css-master/class4.html">Class 4</a></p>
+      <p><a href="gdi-core-intermediate-html-css-master/class4.zip">Class 4 Practice Files</a></p>
+    <h3>Intro to Python</h3>
+      <p><a href="gdi-intro-python/class1.html">Class 1</a></p>
+      <p><a href="gdi-intro-python/class2.html">Class 2</a></p>
+      <p><a href="gdi-intro-python/class3.html">Class 3</a></p>
+      <p><a href="gdi-intro-python/class4.html">Class 4</a></p>
+      <p><a href="gdi-intro-python/Examples.zip">Python Example Files</a></p>
+
   </body>
 </html>
