add winfo hackathon slides

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="gdi-core-javascript-master/reveal/css/reveal.css">
-    <link rel="stylesheet" href="gdi-core-javascript-master/reveal/css/theme/gdisunny.css" id="theme">
+    <link rel="stylesheet" href="gdi-core-javascript-master/reveal/css/theme/gdisunny.css">
   </head>
   <body>
       <h2>Girl Develop It Seattle</h2>
