hosting old version of javascript core

--- a/gdi-core-javascript-master/class2/exercise2/index.html
+++ b/gdi-core-javascript-master/class2/exercise2/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     My Site!</br>
-    <button href = "#" onclick="calculate()">Calculate life time supply</button><br/>
-    <button href = "#" onclick="favoriteThings()">See my favorite things</button><br/>
-    <button href = "#" onclick="myFriends()">My friends</button>
+    <a href = "#" onclick="calculate()">Calculate life time supply</a><br/>
+    <a href = "#" onclick="favoriteThings()">See my favorite things</a><br/>
+    <a href = "#" onclick ="myFriends()">My friends</a>
   </body>
 </html>
