--- a/gdi-core-javascript-master/class2/exercise3/index.html
+++ b/gdi-core-javascript-master/class2/exercise3/index.html
@@ -5,14 +5,14 @@
   </head>
   <body>
     My Site!</br>
-    <button href = "#" onclick="calculate()">Calculate life time supply</button><br/>
+    <a href = "#" onclick="calculate()">Calculate life time supply</a><br/>
     <div id = "lifetime-supply">
       
     </div>
-    <button href = "#" onclick="favoriteThings()">See my favorite things</button>
+    <a href = "#" onclick="favoriteThings()">See my favorite things</a>
     <div id = "favorite-things">
       
     </div>
-    <button href = "#" onclick ="myFriends()">My friends</button>
+    <a href = "#" onclick ="myFriends()">My friends</a>
   </body>
 </html>
