--- a/gdi-core-javascript-master/class3/exercise1/index.html
+++ b/gdi-core-javascript-master/class3/exercise1/index.html
@@ -1,17 +1,19 @@
 <html>
-<head>
+  <head>
     <title>My Site!</title>
-    <script src="calculator.js"></script>
-</head>
-<body>
-    My Site!<br/>
-   
-    <button type="button" onclick="calculate()">Calculate life time supply</button><br />
-    <div id="lifetime-supply">
+    <script src = "http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src = "javascript.js"></script>
+  </head>
+  <body>
+    My Site!</br>
+    <a href = "#" onclick="calculate()">Calculate life time supply</a><br/>
+    <div id = "lifetime-supply">
+      
     </div>
-    <button type="button" onclick="favoriteThings()">See my favorite things</button>
-    <div id="favorite-things">
+    <a href = "#" onclick="favoriteThings()">See my favorite things</a>
+    <div id = "favorite-things">
+      
     </div>
-    <button type="button" onclick="myFriends()">My friends</button>
-</body>
+    <a href = "#" onclick ="myFriends()">My friends</a>
+  </body>
 </html>
