--- a/gdi-core-javascript-master/class1/exercise3/index.html
+++ b/gdi-core-javascript-master/class1/exercise3/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     My Site!
-    <button type="button" onclick="calculate()">Calculate life time supply</button>
+    <a href = "#" onclick="calculate()">Calculate life time supply</a>
   </body>
 </html>
