--- a/gdi-core-javascript-master/class2/exercise1/index.html
+++ b/gdi-core-javascript-master/class2/exercise1/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     My Site!</br>
-    <button type="button" onclick="calculate()">Calculate life time supply</button><br/>
-    <button type="button" onclick="favoriteThings()">See my favorite things</button>
+    <a href = "#" onclick="calculate()">Calculate life time supply</a><br/>
+    <a href = "#" onclick="favoriteThings()">See my favorite things</a>
   </body>
 </html>
