add entity relational model page

--- a/gdi-intro-databases/class1.html
+++ b/gdi-intro-databases/class1.html
@@ -286,7 +286,7 @@ amazon_link2:"http://www.amazon.com/Hyperspace-Scientific-Odyssey-Parallel-Unive
                     <li>Many-to-One: Many employees work in one department.</li>
                     <li>Many-to-Many: Many orders have many products.</li>
                 </ul><br><br>
-								<p><a href="http://www.databasedesign.co.uk/bookdatabasesafirstcourse/chap3/chap3.htm">Deeper reading on Entity Relationship Modeling</a></p>
+								<p><a href="erm.html">Deeper reading on Entity Relationship Modeling</a></p>
         </section>
 
         <section>
