update image paths for erm page

--- a/gdi-intro-databases/erm.html
+++ b/gdi-intro-databases/erm.html
@@ -282,7 +282,7 @@ type CUSTOMER, J. Smith might be one entity. He is an individual
 entity within the type, an element in the set, an instance of the
 type 'customer'. </font></p>
 
-<p><img src="fig3_01.gif" width="269" height="154"></p>
+<p><img src="images/fig3_01.gif" width="269" height="154"></p>
 
 <p><strong>Fig. 3.1</strong> An entity type CUSTOMER and one of
 its attributes Cus_no</p>
@@ -368,7 +368,7 @@ attributes of the entity type and (ideally) their meaning. The
 primary key might be STOCK_NO and one of the attributes QIS,
 which should remove any doubt on this point.</font></p>
 
-<p><img src="fig3_02.gif" width="269" height="154"></p>
+<p><img src="images/fig3_02.gif" width="269" height="154"></p>
 
 <p><font size="3"><strong>Fig. 3.2</strong> A well-placed
 attribute may clarify the meaning of an entity type.</font></p>
@@ -406,7 +406,7 @@ entity type CUSTOMER there are lots of customer entities.</font></p>
 
 <p>&nbsp;</p>
 
-<p><font size="3"><img src="fig3_03.gif" width="489" height="396"></font></p>
+<p><font size="3"><img src="images/fig3_03.gif" width="489" height="396"></font></p>
 
 <p><font size="3"><strong>Fig. 3.3</strong> Three ways of
 thinking of an entity type.</font></p>
@@ -454,7 +454,7 @@ of both the relationship type and its inverse should be shown to
 aid clarity and immediate readibility of the diagram. The <i>tense</i>
 of the relationship type should also be clear from its name. </font></p>
 
-<p><font size="3"><img src="fig3_04.gif" width="423" height="115"></font></p>
+<p><font size="3"><img src="images/fig3_04.gif" width="423" height="115"></font></p>
 
 <p><font size="3"><strong>Fig. 3.4</strong> Representing a
 relationship on an entity-relationship diagram. </font></p>
@@ -497,7 +497,7 @@ database there would be hundreds of customer and invoice entities
 and it would be impossible to show each one on the
 entity-relationship diagram.</font></p>
 
-<p><font size="3"><img src="fig3_05.gif" width="542" height="779"></font></p>
+<p><font size="3"><img src="images/fig3_05.gif" width="542" height="779"></font></p>
 
 <p><font size="3"><strong>Fig. 3.5</strong> Three ways of
 thinking of a relationship.</font></p>
@@ -544,7 +544,7 @@ examples, and to show the impact that the degree of a
 relationship type has on the form of the final implemented
 relational database.</font></p>
 
-<p><font size="3"><img src="fig3_06.gif" width="547" height="384"></font></p>
+<p><font size="3"><img src="images/fig3_06.gif" width="547" height="384"></font></p>
 
 <p><font size="3"><b>Fig. 3.6</b><strong> </strong>Ways of
 classifying relationships.</font></p>
@@ -571,7 +571,7 @@ to be a <i>ternary relationship type</i> since three entity types
 are involved. Examples of unary, binary and ternary relationship
 types are shown in Fig. 3.7.</font></p>
 
-<p><font size="3"><img src="fig3_07.gif" width="480" height="668"></font></p>
+<p><font size="3"><img src="images/fig3_07.gif" width="480" height="668"></font></p>
 
 <p><font size="3"><strong>Fig. 3.7</strong> There can be one,
 two, three or more entity types involved in a relationship.</font></p>
@@ -588,7 +588,7 @@ replace the ternary relationship type 'recommends' with two or
 even three binary relationship types because information would be
 lost. </font></p>
 
-<p><img src="fig3_08.gif" width="549" height="1000"></p>
+<p><img src="images/fig3_08.gif" width="549" height="1000"></p>
 
 <p><font size="3"><strong>Fig. 3.8</strong> (a) shows the ternary
 relationship type 'recommends' linking LECTURER, TEXT and COURSE.
@@ -793,7 +793,7 @@ called a 'one-many' or a 'one-to-many' or a '1 : N' relationship
 type. To fully describe the degree of a relationship type however
 we should also specify its <i>optionality</i>. </font></p>
 
-<p><img src="fig3_10.gif" width="563" height="481"></p>
+<p><img src="images/fig3_10.gif" width="563" height="481"></p>
 
 <p><font size="3"><strong>Fig. 3.10</strong> Relationship degree.</font></p>
 
@@ -815,7 +815,7 @@ and cardinality of the inverse of R together, we can say that a B
 entity is related (by the inverse of R) to zero or one A
 entities.</font></p>
 
-<p><font size="3"><img src="fig3_11.gif" width="384" height="269"></font></p>
+<p><font size="3"><img src="images/fig3_11.gif" width="384" height="269"></font></p>
 
 <p><font size="3"><strong>Fig. 3.11</strong> A set diagram
 representation of Fig. 3.10(b).</font></p>
@@ -839,7 +839,7 @@ inverse of R.</font></p>
 <p><font size="3">Fig. 3.12 summarizes the terminology in another
 example.</font></p>
 
-<p><img src="fig3_12.gif" width="541" height="471"></p>
+<p><img src="images/fig3_12.gif" width="541" height="471"></p>
 
 <p><font size="3"><b>Fig. 3.12</b><strong> </strong>More examples
 of our relationship terminology.</font></p>
@@ -870,7 +870,7 @@ customers you would send an invoice to is also one so the
 cardinality is also one. This is summarized in Fig. 3.13(b). Fig.
 3.13(b) shows the completed relationship.</font></p>
 
-<p><img src="fig3_13.gif" width="577" height="359"></p>
+<p><img src="images/fig3_13.gif" width="577" height="359"></p>
 
 <p><font size="3"><strong>Fig. 3.13</strong> Deriving a 1:N
 (one:many) relationship.</font></p>
@@ -909,7 +909,7 @@ type</b></font></p>
 <p><font size="3">Fig. 3.14 gives an example of a many-many
 relationship type being derived.</font></p>
 
-<p><img src="fig3_14.gif" width="577" height="381"></p>
+<p><img src="images/fig3_14.gif" width="577" height="381"></p>
 
 <p><font size="3"><strong>Fig. 3.14</strong> Deriving a M:N
 (many-many) relationship.</font></p>
@@ -957,7 +957,7 @@ relationship type being derived. It concerns a person and his or
 her birth certificate. We assume that everyone has one and that a
 certificate registers the birth of one person only.</font></p>
 
-<p><img src="fig3_15.gif" width="577" height="363"></p>
+<p><img src="images/fig3_15.gif" width="577" height="363"></p>
 
 <p><font size="3"><strong>Fig. 3.15</strong> Deriving a 1:1
 (one:one) relationship.</font></p>
@@ -1009,7 +1009,7 @@ diagram linking the two relationship types. In summary then, the
 arc shows that a fault report can be for a maximum and a minimum
 of one entity from the types COMPUTER and PRINTER.</font></p>
 
-<p><img src="fig3_16.gif" width="540" height="231"></p>
+<p><img src="images/fig3_16.gif" width="540" height="231"></p>
 
 <p><font size="3"><strong>Fig. 3.16</strong> A mutually exclusive
 relationship 'Was for'.</font></p>
@@ -1059,7 +1059,7 @@ possible to find all the payments that a given customer has made.
 By navigating from CUSTOMER to INVOICE and thence to PAYMENT this
 can be done. </font></p>
 
-<p><img src="fig3_17.gif" width="579" height="311"></p>
+<p><img src="images/fig3_17.gif" width="579" height="311"></p>
 
 <p><font size="3"><strong>Fig. 3.17</strong> The 'Made'
 relationship is redundant.</font></p>
@@ -1087,7 +1087,7 @@ because of the nature of the relationships i.e. their <i>meaning</i>.</font></p>
 advisable to introduce a logically redundant relationship type
 simply out of consideration of efficiency. </font></p>
 
-<p><font size="3"><img src="fig3_18.gif" width="567" height="644"></font></p>
+<p><font size="3"><img src="images/fig3_18.gif" width="567" height="644"></font></p>
 
 <p><font size="3"><strong>Fig. 3.18</strong> An
 entity-relationship diagram for a simple accounting system.</font></p>
